[tool.black]
line-length = 120
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.vscode
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.poetry]
name = "hassio_wb_discovery"
version = "0.1.0"
description = ""
authors = ["Alexander Shishenko <alex@shishenko.com>"]

[tool.poetry.scripts]
hassio_wb_discovery = 'hassio_wb_discovery.main:cli'

[tool.poetry.dependencies]
python = "^3.9"
devtools = "^0.6"
pydantic = "^1.10.3"
python-slugify = "^4.0.1"
PyYAML = "^5.3.1"
click = "^7.1.2"
loguru = "^0.5.3"
deepdiff = "^5.0.2"
asyncio-mqtt = "^0.7.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
